--- a/index.qmd
+++ b/index.qmd
@@ -94,7 +94,7 @@ How to do this without...
 
 ## Session materials
 
--   Slides: <ivelasq-automating-quarto.share.connect.posit.cloud>
+-   Slides: <https://ivelasq-automating-quarto.share.connect.posit.cloud>
 -   GitHub repo with templates: <https://github.com/ivelasq/reports-with-quarto-exercises>
 
 . . .
